# AutoHandDrip

./: README.md
ADP/arduino/: HX711_A.cpp  HX711_A.h
ADP/arduino/Arduino-PID-AutoTune-Library-master/Arduino-PID-AutoTune-Library-master/: pid.cpp  pid.h
ADP/arduino/Arduino-PID-AutoTune-Library-master/Arduino-PID-AutoTune-Library-master/AutoTune_Example/: AutoTune_Example.ino  PID_AutoTune_v0.cpp  pid.cpp  pid.h
ADP/arduino/__/: __.ino
ADP/arduino/try/: HX711_A.cpp  HX711_A.h  Max6675.cpp  ang.cpp  ang.h  pid.cpp  pid.h  try.ino
ADP/arduino/水位传感器demo/: water.ino
ADP/arduino/水位传感器demo/water/: water.ino
ADP/respberry_pi/: CMakeLists.txt
ADP/respberry_pi/lib/: CMakeLists.txt
ADP/respberry_pi/lib/libvibe/: CMakeLists.txt  Vibe.cpp  Vibe.h
ADP/respberry_pi/src/: CMakeLists.txt  Vibe.h  main.cpp
